[package]
name = "threshold-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2" }
crypto-bigint = { version = "*", features = ["rand"] }
rand = "0.8.5"
lazy_static = "*"
crypto-primes = "*"
sha2 = "*"
elliptic-curve = "0.13.8"
ecdsa = "0.16.9"
