[package]
name = "threshold-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2" }
crypto-bigint = { version = "*", features = ["rand"] }
rand = "0.8.5"
crypto-primes = "*"
sha2 = "*"
elliptic-curve = { version = "*", features = ["arithmetic"] }
k256 = { version = "*", features = ["arithmetic"] }
